<resources>
    <!-- app name string-->
    <string name="app_name">Planner</string>

    <!-- settings strings-->
    <string name="change_colour">Change colours</string>
    <string name="change_font">Change font</string>
    <string name="delete_everything">Delete all events</string>
    <string name="view_all_events">View all events</string>
    <string name ="transfer_data_over_bluetooth">Transfer events over bluetooth</string>
    <string name="settings_button">Settings</string>
    <string name="database_button">View all scheduled events</string>
    <string name="change_theme_button">Change Colour Themes</string>
    <string name="alarm_button">Alarm settings</string>

    <!-- calendar screen strings-->
    <string name ="planned_on_this_day">For this day you have planned:</string>
    <string name ="planned_on_this_yesterday">On this day you had planned:</string>

    <!-- history screen strings-->
    <string name="history">History</string>
    <string name="unfinishedEventsYesterday">Congratulations! You finished everything yesterday!</string>
    <string name="finished_events_today">You have no finished events today.</string>
    <string name="back_to_today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="today_history">Events you have finished today</string>
    <string name="yesterday_history">Unfinished events from yesterday</string>
    <!-- history descriptions-->
    <string name="default_description">Click an icon to view todays finished events unfinished events from yesterday or search all your events to find a specific event.</string>
    <string name="search_description">Search through your entire event database to view or edit your events</string>
    <string name="finished_events_description">These are the events you have finished today</string>
    <string name="unfinished_events_description">Here you can view all the events that you didnt finish yesterday</string>

    <!-- colour themes strings-->
    <string name="colour_theme_title">Colour Themes</string>
    <string name="black">Black</string>
    <string name="white">White</string>
    <string name="light_blue">Light Blue</string>
    <string name="light_green">Light Green</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="beige">Beige</string>
    <string name="orange">Orange</string>
    <string name="turquoise">Turquoise</string>


    <!-- colour settings strings-->
    <string name="colour_title">Colour settings</string>
    <string name="button_colour">Button Colour</string>
    <string name="foreground_colour">Foreground Colour</string>
    <string name="background_colour">Background Colour</string>
    <string name="sample_button">Button</string>
    <string name="apply">Apply</string>
    <string name="reset_to_default">Reset to default</string>
    <string name="sample_event">Sample event</string>
    <string name="title">Title</string>
    <string name="empty"></string>

    <!-- font settings strings-->
    <string name="font_title">Font Settings</string>
    <string name="button_font">Button Font</string>
    <string name="title_font">Title Font</string>
    <string name="event_font">Event Font</string>

    <!-- bluetooth settings strings-->
    <string name="bluetooth_title">Send your events over bluetooth</string>
    <string name="search">Bluetooth on</string>
    <string name="partner_address">Enter partner\'s Bluetooth Address</string>
    <string name="transfer_button">Send Events</string>
    <string name="connect_to_partner_button">Connect to partner</string>
    <string name="receive_events_button">Receive Events</string>
    <string name="address1">38:D4:0B:3B:69:5F</string>
    <string name="address2">10:30:47:DC:64:D0</string>
    <string name="load_button">Load Events</string>
    <string name="events_found">Events found on selected device</string>

    <!-- main screen strings-->
    <string name="todays_events_button">Things I have left to do today</string>
    <string name="current_date">January 5th, 2016</string>
    <string name="add_button">new</string>
    <string name="no_events">You have no events. Click add to add some!</string>
    <string name="events_all_finished">You have finished all events! Well done!</string>
    <string name="back_button">back</string>

    <!-- display all events strings-->
    <string name="display_title">All stored events</string>

    <!-- event screen strings-->
    <string name="default_field_name">Event Name</string>
    <string name="frequency">How often do you want to do this?</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="once_a_month">Once a month?</string>
    <string name="enter_date">Enter Date</string>
    <string name="duration_question">Duration?</string>
    <string name="duration">0 minutes</string>
    <string name="minutes">minutes</string>
    <string name="add_to_planner">Add to planner</string>
    <string name="cancel_button">cancel</string>

    <!-- event item strings-->
    <string name="edit_button">edit</string>
    <string name="finished_button">finished</string>
    <string name="subtract_time_button">subtract time</string>
    <string name="save_button">save</string>
    <string name="delete_button">delete event</string>

    <!-- system notification strings-->
    <string name="notification_title">You have unfinished events</string>
    <string name="notification_text">Finish the events before its too late!</string>
    <string name="title_activity_history">History</string>
    <string name="idk">idk</string>
</resources>
