<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/todays_events_button"
        android:id="@+id/todayButton"
        android:layout_weight="0.45" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/database_button"
        android:id="@+id/editEventsButton"
        android:layout_weight="0.45" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_button"
        android:id="@+id/settingsButton"
        android:layout_weight="0.13" />
</LinearLayout>