<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.chris.planner.ChangeColourStatic"
    android:id="@+id/changeColourThemeMainLayout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/colour_theme_title"
        android:id="@+id/colourThemeView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@+id/colourThemeView"
        android:layout_above="@+id/backColourThemeButton">

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/button_colour"
        android:id="@+id/buttonColourThemeView"
        android:layout_below="@+id/colourThemeView"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/foreground_colour"
        android:id="@+id/foregroundColourThemeView"
        android:layout_below="@+id/mainButtonsColourRadioButtons"
        android:layout_alignParentStart="true" />

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/background_colour"
        android:id="@+id/backgroundColourThemeView"
        android:layout_below="@+id/mainForegroundRadioButtons"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonColourThemeView"
        android:layout_alignParentStart="false"
        android:id="@+id/mainButtonsColourRadioButtons"
        android:orientation="horizontal">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonRadioGroupTop"
            android:orientation="vertical">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/black"
                android:id="@+id/buttonRadioButton1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/white"
                android:id="@+id/buttonRadioButton2" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/light_blue"
                android:id="@+id/buttonRadioButton3" />
        </RadioGroup>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonRadioGroupCenter"
            android:orientation="vertical">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/light_green"
                android:id="@+id/buttonRadioButton4" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/red"
                android:id="@+id/buttonRadioButton5" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yellow"
                android:id="@+id/buttonRadioButton6" />
        </RadioGroup>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonRadioGroupBottom"
            android:orientation="vertical">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beige"
                android:id="@+id/buttonRadioButton7" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orange"
                android:id="@+id/buttonRadioButton8" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/turquoise"
                android:id="@+id/buttonRadioButton9" />
        </RadioGroup>
    </RadioGroup>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/foregroundColourThemeView"
        android:layout_alignParentStart="true"
        android:id="@+id/mainForegroundRadioButtons"
        android:orientation="horizontal">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/foregroundRadioGroupTop"
            android:orientation="vertical">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/black"
                android:id="@+id/foregroundButton1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/white"
                android:id="@+id/foregroundButton2" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/light_blue"
                android:id="@+id/foregroundButton3" />
        </RadioGroup>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/foregroundRadioGroupCenter"
            android:orientation="vertical">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/light_green"
                android:id="@+id/foregroundButton4" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/red"
                android:id="@+id/foregroundButton5" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yellow"
                android:id="@+id/foregroundButton6" />
        </RadioGroup>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/foregroundRadioGroupBottom"
            android:orientation="vertical">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beige"
                android:id="@+id/foregroundButton7" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orange"
                android:id="@+id/foregroundButton8" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/turquoise"
                android:id="@+id/foregroundButton9" />
        </RadioGroup>

    </RadioGroup>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/backgroundColourThemeView"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/backColourThemeButton"
        android:id="@+id/mainBackgroundRadioButtons"
        android:orientation="horizontal">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/backgroundRadioGroupTop"
            android:orientation="vertical">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/black"
                android:id="@+id/backgroundButton1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/white"
                android:id="@+id/backgroundButton2" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/light_blue"
                android:id="@+id/backgroundButton3" />
        </RadioGroup>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/backgroundRadioGroupCenter"
            android:orientation="vertical">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/light_green"
                android:id="@+id/backgroundButton4" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/red"
                android:id="@+id/backgroundButton5" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yellow"
                android:id="@+id/backgroundButton6" />
        </RadioGroup>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/backgroundRadioGroupBottom"
            android:orientation="vertical">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beige"
                android:id="@+id/backgroundButton7" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orange"
                android:id="@+id/backgroundButton8" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/turquoise"
                android:id="@+id/backgroundButton9" />
        </RadioGroup>
    </RadioGroup>

    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_button"
        android:id="@+id/backColourThemeButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/apply"
    android:id="@+id/applyColourThemeButton"
    android:layout_alignParentBottom="true"
    android:layout_alignParentStart="true" />

    <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/reset_to_default"
    android:id="@+id/resetToDefaultsColourThemeButton"
    android:layout_alignTop="@+id/backColourThemeButton"
    android:layout_centerHorizontal="true" />

</RelativeLayout>
